fixed bugs with nav-bar jumps

--- a/style.css
+++ b/style.css
@@ -147,8 +147,10 @@ body {
 /*changes nav bar font size to not obscure content*/
 @media screen and (max-width: 810px) {
   .navbar-text {
-    font-size: 14px;
+    font-size: 13px;
 }
-
+#profile-section {
+  padding-top: 0em;
+}
 
 }
